  coordinates.
- The Linux version no longer depends on sys/ioctl.ph. This means 
  the dynamic interface (support for left/right arrow keys, etc.) will work
  out-of-the-box on many systems now.
- Support for creation and deletion of characters.
- Weapon upgrades are now detected.
- Newbie zones are now correctly supported.
- Delay of attacks is now displayed. 200 - Delay indicates the ASPD.
- Support for partySkills on certain job classes

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.

New config options:
- useSelfSkill_#_monsters
  partySkill_#_monsters
  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.
- partySkill_#_target_isJob
  partySkill_#_target_isNotJob
  Only activate partySkill for certain job classes

- avoidList_inLockOnly
  Set to 1, if you want to avoid people on your avoid list when they
  are on screen, but only when you are in lockMap.

New timeouts.txt options:
- ai_attack_unfail 5

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).
- MO_BODYRELOCATION is now recognized as an area-usage skill.
- Don't display "level 65535" when an area-usage skill is used.
- Incoming Request to join Guild message now displays guild name.
- Alchemist potions aren't called [?254] anymore.
- Cards in equipment in storage weren't being displayed.
- $item->{type} is now set correctly for equipment in storage.
- When following players by name, typing 'follow A' then 'follow B' would
  cause you to still be following A instead of B.
- Fixed a crash when cart inventory is not available (such as during login).