@@ -869,7 +869,14 @@ sub sendMove {
 	my $r_socket = shift;
 	my $x = int scalar shift;
 	my $y = int scalar shift;
-	my $msg = pack("C*", 0x85, 0x00) . getCoordString($x, $y);
+	my $msg;
+
+	if ($config{'pkServer'}) {
+		$msg = pack("C*", 0xbc, 0x00) . getCoordString($x, $y) . chr(173);
+	} else {
+		$msg = pack("C*", 0x85, 0x00) . getCoordString($x, $y);
+	}
+
 	sendMsgToServer($r_socket, $msg);
 	debug "Sent move to: $x, $y\n", "sendPacket", 2;
 }
